extra/example-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name : example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
      # nginx.ingress.kubernetes.io/canary: "true"
      # nginx.ingress.kubernetes.io/canary-weight: "100"
      # kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: green-app-service
                port:
                  number: 8081
            path: /
            pathType: Prefix
---
